deploy/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traffic-router
spec:
  tls:
    - secretName: ssl-secret
  rules:
    - host: golang-imageboard-8821.tk
      http:
        paths:
          - path: /
            backend:
              serviceName: web-server-service
              servicePort: 80
  backend:
    serviceName: web-server-service
    servicePort: 80
